fix(#422): Add Groovy test runtime
- Enable Groovy script tests in YAKS runtime
- Align default log pattern with Maven output and Cucumber output
- Make log pattern adjustable
- Add option to enable Maven output for better failure analysis (--verbose)
- Use default logger settings when running Groovy tests
- Support *.groovy files as test sources